# heard

./: .gitignore  CONTRIBUTING.md  HEARD_PROJECT.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
PCB V1/: HEARD_BOM.xlsx
PCB V1/EM SIMULATION FILES/: EM_HEARD_GPS.cst  EM_HEARD_LoRa.cst  EM_HEARD_LoRa_TOUCH.s5p  EM_SI.cst
PCB V1/ODB++ FILES/: PCB1.REP  PCB1.tgz  Status Report.Txt
PCB V1/ODB++ FILES/odb/matrix/: matrix
PCB V1/ODB++ FILES/odb/misc/: attrlist  info
code/core/: platformio.ini
code/core/include/: Constants.h  DisplayEInk.h  SharedData.h  config.h
code/core/include/group/: Connection.h  ConnectionManager.h
code/core/include/path/: StateManager.h
code/core/src/display/: DisplayEInk.cpp
code/dispositivo_figlio/: platformio.ini
code/dispositivo_figlio/src/: main_f.cpp  receiver_base.md
code/dispositivo_madre/data/: percorso.gpx
code/dispositivo_madre/include/: DisplayOled.h  MathUtils.h  config.h
code/dispositivo_madre/src/: SharedData.cpp  main_m.cpp
code/node/src/: receiver.md
code/path_loader/: Morning_Backcountry_Ski.gpx  activity_19135267297.gpx  activity_19135281495.gpx  output_cleaned.gpx  path_cleaner.py  path_loader.py  percorso.gpx  readme.md  requirements.txt  simulation.py
code/simulator/: ARCHITECTURE.md  CMakeLists.txt  README.md  SIMULATION.md  bindings.cpp  config.py  environment.py  gpx_loader.py  main.py  node_device.py  path_state.py  protocol.py  radio.py  record.py  requirements.txt  sim_setup.py  terrain.py  utils.py  visualizer.py
code/simulator/mocks/: Arduino.h  LoRa.h  SPI.h
code/simulator/mocks/freertos/: FreeRTOS.h  semphr.h  task.h
code/simulator/sim/: SimConnection.cpp  SimConnection.h  SimDevice.cpp  SimDevice.h
code/simulator/tests/: conftest.py  test_cpp_node_parity.py  test_cpp_protocol.py  test_gpx_loader.py  test_integration.py  test_path_state.py  test_protocol.py  test_radio.py  test_radio_overhear.py  test_record.py  test_terrain.py  test_utils.py
code/simulator/web/: .gitignore  README.md  app.js  config.js.example  index.html  style.css
code/simulator/web/js/: constants.js  debug.js  geo.js  layers.js  map-setup.js  markers.js  playback.js  render.js  sidebar.js  style.js  trace.js
(+75 files in other folders)
